# ripc_ws

./: .gitignore  README.md  frames_2025-12-22_15.18.19.gv  frames_2026-01-17_13.01.50.gv  frames_2026-01-21_20.51.39.gv  frames_2026-02-22_16.10.53.gv  frames_2026-02-22_18.23.53.gv  frames_2026-04-10_17.28.41.gv  ripc_survey_in_base.yaml  rtcm_serial_publisher.py  survey_in_base.launch.py  teensy_bow_localization.ino  teensy_stern_localization.ino
src/: base_config.py  test_script.py
src/my_custom_sim/my_custom_world/: sydney_regatta_custom.sdf
src/my_custom_sim/my_usv_description/: CMakeLists.txt  package.xml
src/my_custom_sim/my_usv_description/launch/: spawn_cylinder.launch.py  spawn_cylinder_in_vrx.launch.py
src/my_custom_sim/my_usv_description/models/my_cylinder/: model.config  model.sdf
src/ripc_bringup/: CMakeLists.txt  package.xml
src/ripc_bringup/custom_usv_sensors/: CMakeLists.txt  package.xml
src/ripc_bringup/custom_usv_sensors/config/: lidar.yaml
src/ripc_bringup/launch/: all.launch.py  system.launch.py
src/ripc_control/: CMakeLists.txt  package.xml
src/ripc_control/config/: usv_ros2_control.yaml
src/ripc_control/launch/: control.launch.py  teleop.py
src/ripc_control/scripts/: send_thrust.py  stress_test_node.py
src/ripc_description/: CMakeLists.txt  package.xml
src/ripc_description/dynamics/: ripc_dynamics_plugin.xacro  thruster_dynamics.xacro
src/ripc_description/launch/: description.launch.py
src/ripc_description/meshes/: prop.dae  ripc_usv.dae
src/ripc_description/urdf/: ripc_usv.urdf.xacro
src/ripc_description/urdf/sensors/: gps.xacro  imu.xacro  lidar.xacro
src/ripc_gazebo/: CMakeLists.txt  package.xml
src/ripc_gazebo/config/: bridge_config.yaml
src/ripc_gazebo/launch/: gazebo_world.launch.py  sim_bringup.launch.py  spawn_usv.launch.py
src/ripc_gazebo/models/custom_usv/: model.config  ripc_model.sdf
src/ripc_gazebo/plugins/: ripc_plugins.xacro
src/ripc_gazebo/sensors/: gps.xacro  imu.xacro
src/ripc_gazebo/worlds/: simple_ocean.sdf
src/ripc_localization/: CMakeLists.txt  package.xml
src/ripc_localization/config/: base_config.yaml  dual_global_ekf.yaml  dual_local_ekf.yaml  ekf.yaml  global_ekf.yaml  gps_rtcm.yaml  local_ekf.yaml  navsat_transform.yaml  navsat_transform_node.yaml  ripc_ws.code-workspace  sim_global_ekf.yaml  sim_local_ekf.yaml  sim_navsat_transform_node.yaml  single_global_ekf.yaml  single_local_ekf.yaml
src/ripc_localization/launch/: dual_ekf.launch.py  ekf.launch.py  single_ekf.launch.py
src/ripc_localization/nodes/: rtcm_bridge.py
src/ripc_mission_planning/: CMakeLists.txt  package.xml
src/ripc_mission_planning/config/: mission_params.yaml
src/ripc_mission_planning/launch/: mission_planner.launch.py
src/ripc_mission_planning/src/: mission_planner_node.py
src/ripc_nav2/: CMakeLists.txt  package.xml
src/ripc_nav2/config/: nav2_params.yaml
src/ripc_nav2/launch/: nav2.launch.py
src/ripc_nav2/params/: nav2_params.yaml
src/ripc_sensors/: CMakeLists.txt  package.xml
src/ripc_sensors/config/: lidar.yaml
src/ripc_sensors/launch/: sensors.launch.py
src/ripc_state_estimation/: CMakeLists.txt  package.xml
src/ripc_state_estimation/config/: ekf.yaml
src/ripc_state_estimation/launch/: ekf.launch.py
src/wamv_validation/: package.xml  setup.cfg  setup.py
src/wamv_validation/launch/: bag_validation.launch.py  wamv_simple_fwd_tf_launch.py  wamv_simple_turning.launch.py
src/wamv_validation/scripts/: wamv_motion_cmd.py
src/wamv_validation/wamv_validation/: wamv_right_thruster_turn.py  wamv_simple_forward.py  wamv_twist_from_pose.py
src/wamv_validation/wamv_validation/analysis/: r_validation.py  ros2bag_to_csv.py  surge_validation.py  thrust_validation.py
src/wamv_validation/wamv_validation/analysis/csv_176/: wamv_thrusters_left_thrust.csv  wamv_thrusters_right_thrust.csv
wamv_bags/: metadata.yaml
wamv_csv/: 3dof_output.csv  wamv_sensors_position_ground_truth_odometry.csv  wamv_sensors_position_ground_truth_odometry2.csv  wamv_thrusters_left_thrust.csv  wamv_thrusters_right_thrust.csv
