<?xml version="1.0"?>
<package format="3">
  <name>ripc_bringup</name>
  <version>0.0.1</version>
  <description>Bringup and control nodes for RIPC USV</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ripc_description</exec_depend>
  <exec_depend>ripc_gazebo</exec_depend>

</package>
