<?xml version="1.0"?>
<package format="3">
  <name>ripc_control</name>
  <version>0.0.1</version>
  <description>ros2_control config and hardware interface for USV</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
