<?xml version="1.0"?>
<package format="3">
  <name>ripc_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo Harmonic / VRX-style simulation for RIPC USV</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ripc_description</exec_depend>

</package>
