<?xml version="1.0"?>
<package format="3">
  <name>custom_usv_mission</name>
  <version>0.0.1</version>
  <description>Mission planner for custom USV</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
