<?xml version='1.0'?>
<package format='3'>
  <name>usv_state_estimation</name>
  <version>0.0.1</version>
  <description>EKF state estimation for the custom USV (robot_localization configs)</description>
  <maintainer email='you@example.com'>You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rclpy</exec_depend>
</package>
