[develop]
script_dir=$base/lib/wamv_validation
[install]
install_scripts=$base/lib/wamv_validation

[options]
packages = find:
install_requires =
    setuptools

[options.package_data]
* = *

[options.data_files]
share/ament_index/resource_index/packages = resource/wamv_validation
share/wamv_validation = package.xml
share/wamv_validation/launch = launch/*
